# HRM-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: README.md
benchmarks/: __init__.py  benchmark_hf.py  compare_quantized_decode.py  metrics_history.csv  time_to_answer.py
conversion/: __init__.py  convert_to_mlx.py  quantize_mlx.py
marketing/assets/captures/: hrm_mlx_4bit.json  hrm_mlx_bf16.json  hrm_mlx_fast.json  pytorch_cpu.json  pytorch_mps.json
marketing/tools/: capture_demo_outputs.py  generate_demo_video.py  generate_reasoning_demo.py
mlx_hrm_text/: __init__.py  benchmark.py  generate.py  model.py  profile_decode.py  runner.py
scripts/: generate_benchmark_chart.py
